--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,7 +1,7 @@
 @page "/"
 
-<h1>Hello, world!</h1>
+<h1>Hello, world! My name is Tumi</h1>
 
-Welcome to your new app.
+Welcome to your new app. I have successfully deployed a .NET application using a CI/CD pipeline.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
